
3.12  2012-07-20
  - Added json method to Mojo::UserAgent::Transactor.
  - Added build_json_tx and post_json methods to Mojo::UserAgent.
  - Added post_json_ok method to Test::Mojo.
  - Added json_class attribute to Mojo::UserAgent::Transactor.
  - Added n function to ojo.
  - Improved text_field helper to always set the type attribute. (marty, sri)
  - Improved documentation.

3.11  2012-07-19
  - Added or method to Test::Mojo. (moritz, sri)
  - Added file and serve_asset methods to Mojolicious::Static.
  - Improved default descriptions for many methods in Test::Mojo.
  - Improved Mojo::Cache performance. (nic)
  - Improved documentation.
  - Improved tests.
  - Fixed a few small encoding bugs in Test::Mojo.

3.10  2012-07-17
  - Improved tests.
  - Fixed small bug in Mojo::Asset::File.

3.09  2012-07-16
  - Added spurt function to Mojo::Util.
  - Added spurt method to Mojo::ByteStream.
  - Improved documentation.
  - Improved tests.

3.08  2012-07-14
  - Fixed small Mojo::Template bug.

3.07  2012-07-13
  - Improved template error messages for generator commands and config files.
  - Improved documentation.
  - Improved tests.
  - Fixed small bug in Mojolicious::Plugin::EPRenderer that prevented code to
    be added to templates.
  - Fixed small bug in Mojolicious::Plugin::JSONConfig that prevented code to
    be added to config files.

3.06  2012-07-11
  - Added tls_verify option to Mojo::IOLoop::Server->listen. (scottw)
  - Added verify parameter to Mojo::Server::Daemon->listen. (scottw)
  - Improved documentation.
  - Improved tests.
  - Fixed small bug in Mojo::UserAgent that prevented port reuse.

3.05  2012-07-08
  - Reduced default graceful_timeout from 30 to 20 seconds in
    Mojo::Server::Hypnotoad.
  - Improved documentation.
  - Improved tests.
  - Fixed small initialization bug in Mojo::IOLoop::Stream.

3.04  2012-07-07
  - Improved Mojo::IOLoop performance by reducing stream timeout precision
    from 0.025 to 0.5 seconds.

3.03  2012-07-06