@@ -7,6 +7,7 @@
   - Added n function to ojo.
   - Improved text_field helper to always set the type attribute. (marty, sri)
   - Improved documentation.
+  - Improved tests.
 
 3.11  2012-07-19
   - Added or method to Test::Mojo. (moritz, sri)
